Implemention of a secure communication